--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-Hello, world.
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+
+    <title>ndeme.github.io by ndeme</title>
+  </head>
+
+  <body>
+
+    <header>
+      <div class="container">
+        <h1>ndeme.github.io</h1>
+        <h2>Yet another website to maintain. </h2>
+
+        <section id="downloads">
+          <a href="https://github.com/ndeme" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
+
+    <div class="container">
+      <section id="main_content">
+        <h3>
+<a id="trouble" class="anchor" href="#trouble" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Trouble?</h3>
+
+<p>Consider shutting off the computer (not just sleep) and go outside. </p>
+      </section>
+    </div>
+
+    
+  </body>
+</html>
