Mentioning sense-hat.py.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <h2>Yet another website to maintain. </h2>
 
         <section id="downloads">
-          <a href="https://github.com/ndeme" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+          Here is a v0.2 python script to drop sense hat values. Needs actual temperature (feels) calucation refactoring.
+          <a href="https://github.com/ndeme/ndeme.github.io/blob/master/sense-hat.py" class="btn btn-github"><span class="icon"></span>Sense Hat</a>
         </section>
       </div>
     </header>
