Underground code blog v2.0 BETA.

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-    <title>ndeme.github.io by ndeme</title>
+    <title>ndeme: hello!</title>
   </head>
 
   <body>
 
     <header>
       <div class="container">
-        <h1>ndeme.github.io</h1>
-        <h2>Yet another website to maintain. </h2>
+        <h1>ndeme: hello!</h1>
+        <h2>Welcome 2 my underground code blog.</h2>
 
         <section id="downloads">
           Here is a v0.2 python script to drop sense hat values. Needs actual temperature (feels) calucation refactoring.
